Disallow to break line in style names #2375

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -35,31 +35,31 @@
         <li><label><input type="radio"
                           name="style" value="plain">
               <img src="style-plain.png" alt=""/>
-              __MSG_config_style_plain__</label></li>
+              <span class="style-name">__MSG_config_style_plain__</span></label></li>
         <li><label><input type="radio"
                           name="style" value="plain-dark">
               <img src="style-plain-dark.png" alt=""/>
-              __MSG_config_style_plain_dark__</label></li>
+              <span class="style-name">__MSG_config_style_plain_dark__</span></label></li>
         <li><label><input type="radio"
                           name="style" value="vertigo">
               <img src="style-vertigo.png" alt=""/>
-              __MSG_config_style_vertigo__</label></li>
+              <span class="style-name">__MSG_config_style_vertigo__</span></label></li>
         <li><label><input type="radio"
                           name="style" value="mixed">
               <img src="style-mixed.png" alt=""/>
-              __MSG_config_style_mixed__</label></li>
+              <span class="style-name">__MSG_config_style_mixed__</span></label></li>
         <li><label><input type="radio"
                           name="style" value="metal">
               <img src="style-metal.png" alt=""/>
-              __MSG_config_style_metal__</label></li>
+              <span class="style-name">__MSG_config_style_metal__</span></label></li>
         <li><label><input type="radio"
                           name="style" value="sidebar">
               <img src="style-sidebar.png" alt=""/>
-              __MSG_config_style_sidebar__</label></li>
+              <span class="style-name">__MSG_config_style_sidebar__</span></label></li>
         <li><label><input type="radio"
                           name="style" value="highcontrast">
               <img src="style-highcontrast.png" alt=""/>
-              __MSG_config_style_highcontrast__</label></li>
+              <span class="style-name">__MSG_config_style_highcontrast__</span></label></li>
         <li><label><input type="radio"
                           name="style" value="none">
               __MSG_config_style_none__
