Reduce needless whitespaces around messages #2377

--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -96,14 +96,15 @@
 
 <h1 id="title">__MSG_extensionName__</h1>
 <div><img id="icon" src="24x24-light.svg" alt=""></div>
-<p>__MSG_message_startup_description_1__
-   <em>__MSG_message_startup_description_key__</em>
-   __MSG_message_startup_description_2__
-   <em>__MSG_extensionName__</em>
-   __MSG_message_startup_description_3__</p>
-<p>__MSG_config_addons_description_before__
-   <a href="__MSG_helper_addons_list_link_uri__" target="_blank">__MSG_config_addons_description_link_label__</a>
-   __MSG_config_addons_description_after__</p>
+<p>__MSG_message_startup_description_1__<em
+  >__MSG_message_startup_description_key__</em
+  >__MSG_message_startup_description_2__<em
+  >__MSG_extensionName__</em
+  >__MSG_message_startup_description_3__</p>
+<p>__MSG_config_addons_description_before__<a
+  href="__MSG_helper_addons_list_link_uri__" target="_blank"
+  >__MSG_config_addons_description_link_label__</a
+  >__MSG_config_addons_description_after__</p>
 
 <p>__MSG_message_startup_requestPermissions_description__</p>
 <div class="permissions">
@@ -121,11 +122,12 @@
   <span class="arrow top-tabbar">▼</span>
   <span class="arrow sidebar-header">▼</span>
   <p class="notify">__MSG_message_startup_userChromeCss_notify__</span>
-  <p class="description">
-    __MSG_message_startup_userChromeCss_description_1__
-    <a href="__MSG_message_startup_userChromeCss_description_link_uri__" target="_blank">__MSG_message_startup_userChromeCss_description_link_label__</a>
-    __MSG_message_startup_userChromeCss_description_2__
-    <em>__MSG_message_startup_userChromeCss_description_note__</em>
-    __MSG_message_startup_userChromeCss_description_3__
-  </p>
+  <p class="description"
+    >__MSG_message_startup_userChromeCss_description_1__<a
+    href="__MSG_message_startup_userChromeCss_description_link_uri__" target="_blank"
+    >__MSG_message_startup_userChromeCss_description_link_label__</a
+    >__MSG_message_startup_userChromeCss_description_2__<em
+    >__MSG_message_startup_userChromeCss_description_note__</em
+    >__MSG_message_startup_userChromeCss_description_3__</p
+    >
 </div>
