Better labeling of new tab options

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -265,6 +265,9 @@
                           <input id="guessNewOrphanTabAsOpenedByNewTabCommandUrl"
                                  size="20">
                            __MSG_config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_after__</label></p>
+    </fieldset>
+    <fieldset>
+      <legend>__MSG_config_duplicateTabAction_caption__</legend>
     <p><label>__MSG_config_autoAttachOnDuplicated_before__
               <select id="autoAttachOnDuplicated">
                 <option value="-1">__MSG_config_autoAttachOnDuplicated_noControl__</option>
@@ -276,10 +279,6 @@
               __MSG_config_autoAttachOnDuplicated_after__
               <span class="preview-image"></span></label></p>
     </fieldset>
-    <p><label><input id="inheritContextualIdentityToNewChildTab"
-                     type="checkbox">
-              __MSG_config_inheritContextualIdentityToNewChildTab_label__</label></p>
-
     <fieldset>
       <legend>__MSG_config_sameSiteOrphan_caption__</legend>
       <p><label>__MSG_config_autoAttachSameSiteOrphan_before__
@@ -295,6 +294,14 @@
       <p><label><input id="inheritContextualIdentityToSameSiteOrphan"
                        type="checkbox">
                 __MSG_config_inheritContextualIdentityToSameSiteOrphan_label__</label></p>
+    </fieldset>
+
+    <fieldset>
+      <legend>__MSG_config_newTabContainer_caption__</legend>
+    <p><label><input id="inheritContextualIdentityToNewChildTab"
+                     type="checkbox">
+              __MSG_config_inheritContextualIdentityToNewChildTab_label__
+              <br>__MSG_config_inheritContextualIdentityToNewChildTab_description__</label></p>
     </fieldset>
 
     <fieldset>
