Make logging checkboxes inline

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -748,11 +748,11 @@
                      type="number"
                      size="6">
              __MSG_config_maximumAcceptableDelayForTabDuplication_after__</label></p>
-    <p><label class="has-checkbox"
+    <p><label class="has-checkbox inline"
              ><input id="loggingQueries"
                      type="checkbox">
               __MSG_config_loggingQueries_label__</label>
-       <label class="has-checkbox"
+       <label class="has-checkbox inline"
              ><input id="loggingConnectionMessages"
                      type="checkbox">
               __MSG_config_loggingConnectionMessages_label__</label>
