--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -95,7 +95,7 @@
       <span id="dummy-highlight-color-box"></span>
       <span class="throbber"><span id="sync-throbber"></span></span>
       <li id="dummy-tab" class="tab">
-        <tab-favicon><span class="throbber" id="master-throbber-container"><span id="master-throbber"></span></span></tab-favicon>
+        <tab-favicon class="favicon"><span class="throbber" id="master-throbber-container"><span id="master-throbber"></span></span></tab-favicon>
         <span class="label">-</span>
         <span class="counter">0</span>
         <span class="closebox"></button>
