In the content area, show group-tab item with folder icon #2394

--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -90,6 +90,10 @@
     mask: url("./icons/globe-16.svg") no-repeat center / 100%;
   }
 
+  #tabs li.use-default-favicon.group-tab a::before {
+    mask-image: url("./icons/folder-16.svg");
+  }
+
   #tabs li {
     display: block;
     list-style: none;
