Migrate to tab-label custom element

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -96,7 +96,7 @@
       <span class="throbber"><span id="sync-throbber"></span></span>
       <li id="dummy-tab" class="tab">
         <tab-favicon class="favicon"><span class="throbber" id="master-throbber-container"><span id="master-throbber"></span></span></tab-favicon>
-        <span class="label">-</span>
+        <tab-label value="-"></tab-label>
         <span class="counter">0</span>
         <span class="closebox"></button>
       </li>
