--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -97,8 +97,8 @@
       <li id="dummy-tab" class="tab">
         <tab-favicon class="favicon"><span class="throbber" id="master-throbber-container"><span id="master-throbber"></span></span></tab-favicon>
         <tab-label value="-"></tab-label>
-        <span class="counter">0</span>
-        <span class="closebox"></button>
+        <tab-counter>0</tab-counter>
+        <tab-closebox></tab-closebox>
       </li>
     </ul>
     <div id="blocking-screen">
