Migrate to tab-item custom element

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -94,12 +94,12 @@
       <span id="dummy-favicon-size-box"></span>
       <span id="dummy-highlight-color-box"></span>
       <span class="throbber"><span id="sync-throbber"></span></span>
-      <li id="dummy-tab" class="tab">
+      <tab-item id="dummy-tab">
         <tab-favicon class="favicon"><span class="throbber" id="master-throbber-container"><span id="master-throbber"></span></span></tab-favicon>
         <tab-label value="-"></tab-label>
         <tab-counter>0</tab-counter>
         <tab-closebox></tab-closebox>
-      </li>
+      </tab-item>
     </ul>
     <div id="blocking-screen">
       <span class="throbber"></span>
