--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -94,11 +94,11 @@
       <span id="dummy-favicon-size-box"></span>
       <span id="dummy-highlight-color-box"></span>
       <span class="throbber"><span id="sync-throbber"></span></span>
-      <tab-item id="dummy-tab">
+      <tab-item id="dummy-tab" class="tab">
         <tab-favicon class="favicon"><span class="throbber" id="master-throbber-container"><span id="master-throbber"></span></span></tab-favicon>
-        <tab-label value="-"></tab-label>
-        <tab-counter>0</tab-counter>
-        <tab-closebox></tab-closebox>
+        <tab-label class="label" value="-"></tab-label>
+        <tab-counter class="counter">0</tab-counter>
+        <tab-closebox class="close-box"></tab-closebox>
       </tab-item>
     </ul>
     <div id="blocking-screen">
