Add a configuration UI to control new tabs from other applications

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -333,6 +333,25 @@
                        type="checkbox">
                 __MSG_config_inheritContextualIdentityToSameSiteOrphan_label__</label></p>
     </fieldset>
+    <fieldset>
+      <legend>__MSG_config_fromExternal_caption__</legend>
+      <p><label>__MSG_config_autoAttachOnOpenedFromExternal_before__
+                <select id="autoAttachOnOpenedFromExternal">
+                  <option value="-1">__MSG_config_autoAttachOnOpenedFromExternal_noControl__</option>
+                  <option value="0">__MSG_config_autoAttachOnOpenedFromExternal_independent__</option>
+                  <option value="1">__MSG_config_autoAttachOnOpenedFromExternal_child__</option>
+                  <option value="2">__MSG_config_autoAttachOnOpenedFromExternal_sibling__</option>
+                  <option value="3">__MSG_config_autoAttachOnOpenedFromExternal_nextSibling__</option>
+                </select>
+                __MSG_config_autoAttachOnOpenedFromExternal_after__
+              <span class="preview-image"></span></label></p>
+      <p><label class="has-checkbox"
+               ><input id="inheritContextualIdentityToTabsFromExternal"
+                       type="checkbox">
+                __MSG_config_inheritContextualIdentityToTabsFromExternal_label__</label></p>
+    </fieldset>
+
+    <hr>
 
     <fieldset>
       <legend>__MSG_config_newTabContainer_caption__</legend>
