--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -304,21 +304,18 @@
                            __MSG_config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_after__</label></p>
     </fieldset>
     <fieldset>
-      <legend>__MSG_config_duplicateTabAction_caption__</legend>
-    <p><label>__MSG_config_autoAttachOnDuplicated_before__
-              <select id="autoAttachOnDuplicated">
-                <option value="-1">__MSG_config_autoAttachOnDuplicated_noControl__</option>
-                <option value="0">__MSG_config_autoAttachOnDuplicated_independent__</option>
-                <option value="1">__MSG_config_autoAttachOnDuplicated_child__</option>
-                <option value="2">__MSG_config_autoAttachOnDuplicated_sibling__</option>
-                <option value="3">__MSG_config_autoAttachOnDuplicated_nextSibling__</option>
-              </select>
-              __MSG_config_autoAttachOnDuplicated_after__
+      <legend>__MSG_config_autoAttachWithURL_caption__</legend>
+      <p><label>__MSG_config_duplicateTabAction_caption__: __MSG_config_autoAttachOnDuplicated_before__
+                <select id="autoAttachOnDuplicated">
+                  <option value="-1">__MSG_config_autoAttachOnDuplicated_noControl__</option>
+                  <option value="0">__MSG_config_autoAttachOnDuplicated_independent__</option>
+                  <option value="1">__MSG_config_autoAttachOnDuplicated_child__</option>
+                  <option value="2">__MSG_config_autoAttachOnDuplicated_sibling__</option>
+                  <option value="3">__MSG_config_autoAttachOnDuplicated_nextSibling__</option>
+                </select>
+                __MSG_config_autoAttachOnDuplicated_after__
               <span class="preview-image"></span></label></p>
-    </fieldset>
-    <fieldset>
-      <legend>__MSG_config_sameSiteOrphan_caption__</legend>
-      <p><label>__MSG_config_autoAttachSameSiteOrphan_before__
+      <p><label>__MSG_config_sameSiteOrphan_caption__: __MSG_config_autoAttachSameSiteOrphan_before__
                 <select id="autoAttachSameSiteOrphan">
                   <option value="-1">__MSG_config_autoAttachSameSiteOrphan_noControl__</option>
                   <option value="0">__MSG_config_autoAttachSameSiteOrphan_independent__</option>
@@ -328,14 +325,11 @@
                 </select>
                 __MSG_config_autoAttachSameSiteOrphan_after__
               <span class="preview-image"></span></label></p>
-      <p><label class="has-checkbox"
-               ><input id="inheritContextualIdentityToSameSiteOrphan"
-                       type="checkbox">
-                __MSG_config_inheritContextualIdentityToSameSiteOrphan_label__</label></p>
-    </fieldset>
-    <fieldset>
-      <legend>__MSG_config_fromExternal_caption__</legend>
-      <p><label>__MSG_config_autoAttachOnOpenedFromExternal_before__
+      <p class="sub"><label class="has-checkbox"
+                           ><input id="inheritContextualIdentityToSameSiteOrphan"
+                                   type="checkbox">
+                            __MSG_config_inheritContextualIdentityToSameSiteOrphan_label__</label></p>
+      <p><label>__MSG_config_fromExternal_caption__: __MSG_config_autoAttachOnOpenedFromExternal_before__
                 <select id="autoAttachOnOpenedFromExternal">
                   <option value="-1">__MSG_config_autoAttachOnOpenedFromExternal_noControl__</option>
                   <option value="0">__MSG_config_autoAttachOnOpenedFromExternal_independent__</option>
@@ -345,13 +339,11 @@
                 </select>
                 __MSG_config_autoAttachOnOpenedFromExternal_after__
               <span class="preview-image"></span></label></p>
-      <p><label class="has-checkbox"
-               ><input id="inheritContextualIdentityToTabsFromExternal"
-                       type="checkbox">
-                __MSG_config_inheritContextualIdentityToTabsFromExternal_label__</label></p>
+      <p class="sub"><label class="has-checkbox"
+                           ><input id="inheritContextualIdentityToTabsFromExternal"
+                                   type="checkbox">
+                            __MSG_config_inheritContextualIdentityToTabsFromExternal_label__</label></p>
     </fieldset>
-
-    <hr>
 
     <fieldset>
       <legend>__MSG_config_newTabContainer_caption__</legend>
